TOC fix spacing

--- a/src/style.css
+++ b/src/style.css
@@ -343,7 +343,7 @@ img {
 }
 
 .table-of-contents {
-  margin-left: 50px;
+  margin-left: 1em;
 }
 
 /* Media queries */
